Enable preview for string template